set region upon order creation